test/tests/stages/9_functions/valid/extra_credit/goto_shared_name.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[0]: 
        CB: 
          List[3]: 
            CS: 
              CGoto: 
                TIdentifier: foo
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
            CS: 
              CLabel: 
                TIdentifier: foo
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: foo
                  List[0]: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
